--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mongodb": "6.5",
+    "mongodb": "^6.13.0",
     "uuid": "^8.3.2"
   }
 }
